--- a/aboutus.html
+++ b/aboutus.html
@@ -10,10 +10,10 @@
   <!-- Header -->
   <header class="main-header">
     <div>
-      <h2 class="logo"><a href="homepage.html">BAHAO</a></h2>
+      <h2 class="logo"><a href="index.html">BAHAO</a></h2>
     </div>
     <nav class="bold">
-      <a href="homepage.html">Homepage</a>
+      <a href="index.html">Homepage</a>
       <a href="#">The Problem</a>
       <a href="#">News & Updates</a>
       <a href="aboutus.html">About Us</a>
@@ -118,10 +118,10 @@
   <!-- Footer -->
   <div class="footer">
     <div>
-      <h2 class="logo"><a href="homepage.html">BAHAO</a></h2>
+      <h2 class="logo"><a href="index.html">BAHAO</a></h2>
     </div>
     <nav class="footer-nav bold">
-      <a href="homepage.html">Homepage</a>
+      <a href="index.html">Homepage</a>
       <a href="#">The Problem</a>
       <a href="#">News & Updates</a>
       <a href="aboutus.html">About Us</a>
